--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>fr.paris.lutece</groupId>
             <artifactId>lutece-core</artifactId>
-            <version>[6.2.1]</version>
+            <version>[6.2.1,)</version>
             <type>lutece-core</type>
         </dependency>
         <dependency>
