--- a/pom.xml
+++ b/pom.xml
@@ -38,19 +38,19 @@
         <dependency>
             <groupId>fr.paris.lutece</groupId>
             <artifactId>lutece-core</artifactId>
-            <version>[6.2.1,)</version>
+            <version>[6.2.1,6.9.9]</version>
             <type>lutece-core</type>
         </dependency>
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>module-extend-comment</artifactId>
-            <version>[1.1.14,)</version>
+            <version>[1.1.14]</version>
             <type>lutece-plugin</type>
         </dependency>
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-blog</artifactId>
-            <version>[2.0.0-SNAPSHOT,)</version>
+            <version>[2.0.0]</version>
             <type>lutece-plugin</type>
         </dependency>
     </dependencies>
