--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
         </dependency>
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
+            <artifactId>plugin-extend</artifactId>
+            <version>[1.3.4]</version>
+            <type>lutece-plugin</type>
+        </dependency>
+        <dependency>
+            <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-blog</artifactId>
             <version>[2.0.0]</version>
             <type>lutece-plugin</type>
