--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
         <artifactId>module-blog-extendcomment</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
 
     	<name>Lutece blog extendcomment module</name>
 
@@ -36,27 +36,21 @@
 
     <dependencies>
         <dependency>
-            <groupId>fr.paris.lutece</groupId>
-            <artifactId>lutece-core</artifactId>
-            <version>[6.2.1,6.9.9]</version>
-            <type>lutece-core</type>
-        </dependency>
-        <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>module-extend-comment</artifactId>
-            <version>[1.1.14]</version>
+            <version>[1.1.15,)</version>
             <type>lutece-plugin</type>
         </dependency>
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-extend</artifactId>
-            <version>[1.3.4]</version>
+            <version>[1.3.5,)</version>
             <type>lutece-plugin</type>
         </dependency>
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-blog</artifactId>
-            <version>[2.0.0]</version>
+            <version>[3.0.0-SNAPSHOT,)</version>
             <type>lutece-plugin</type>
         </dependency>
     </dependencies>
