--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
         <artifactId>module-blog-extendcomment</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
 
     	<name>Lutece blog extendcomment module</name>
 
@@ -52,11 +52,12 @@
     <properties>
         <componentName>blog-extendcomment</componentName>
         <jiraProjectName>BGEXTDCOMT</jiraProjectName>
-        <jiraComponentId></jiraComponentId>
+        <jiraComponentId />
     </properties>
     <scm>
         <connection>scm:git:https://github.com/lutece-platform/lutece-extends-module-blog-extendcomment.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-extends-module-blog-extendcomment.git</developerConnection>
         <url>https://github.com/lutece-platform/lutece-extends-module-blog-extendcomment.git</url>
-    </scm>
+      <tag>module-blog-extendcomment-2.0.0</tag>
+  </scm>
 </project>
